# SPD

./: .gitignore  CMakeLists.txt  README.md  taski.txt  taski291.txt  taski317.txt
inc/: Task.hh
src/: main.cpp  tasks.cpp
